feat: update sign up response
